vpc_layer.yaml
---
AWSTemplateFormatVersion: 2010-09-09
Description: Default VPC_Layer Template for the Project

Parameters:
  ProjectName:
    Type: String
    Description: Project Name
    Default: tgw
  RegionName:
    Type: String
    Description: Region Name
    AllowedValues:
      - seoul
      - saopaulo
  PublicKeyMaterial:
    Type: String
    Description: Key Pair - Public Key Material
  AdminIp:
    Type: String
    Description: Admin Public IP Address
    Default: 0.0.0.0/0

Mappings:
  CidrMap:
    ap-northeast-2:
      VpcCidr: 10.1.0.0/16
      PubSn1Cidr: 10.1.1.0/24
      PubSn2Cidr: 10.1.2.0/24
      WebSn3Cidr: 10.1.3.0/24
      WebSn4Cidr: 10.1.4.0/24
      ConSn5Cidr: 10.1.5.0/24
      ConSn6Cidr: 10.1.6.0/24
    sa-east-1:
      VpcCidr: 10.3.0.0/16
      PubSn1Cidr: 10.3.1.0/24
      PubSn2Cidr: 10.3.2.0/24
      WebSn3Cidr: 10.3.3.0/24
      WebSn4Cidr: 10.3.4.0/24
      ConSn5Cidr: 10.3.5.0/24
      ConSn6Cidr: 10.3.6.0/24
  AmiMap:
    ap-northeast-2:
      Ami: ami-0c003e98ceffee43e
    sa-east-1:
      Ami: ami-0c78dc042da77017f
    openvpn:
      Ami: ami-051d52e500c684ec4

Conditions:
  Seoul: !Equals [!Ref "AWS::Region", ap-northeast-2]
  Saopaulo: !Equals [!Ref "AWS::Region", sa-east-1]

Resources:
# VPC & Internet Gateway
  Vpc:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !FindInMap [CidrMap, !Ref "AWS::Region", VpcCidr]
      EnableDnsHostnames: true
      EnableDnsSupport: true
      Tags:
        - Key: Name
          Value: !Sub "${ProjectName}-${RegionName}-vpc"

  Igw:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: !Sub "${ProjectName}-${RegionName}-igw"

  IgwAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      InternetGatewayId: !Ref Igw
      VpcId: !Ref Vpc

# Ingress Public Subnet & Route Table
  PubSn1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref Vpc
      AvailabilityZone: !Select [0, !GetAZs '']
      CidrBlock: !FindInMap [CidrMap, !Ref "AWS::Region", PubSn1Cidr]
      Tags:
        - Key: Name
          Value: !Sub "${ProjectName}-${RegionName}-pub-sn1"

  PubSn2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref Vpc
      AvailabilityZone: !Select [2, !GetAZs '']
      CidrBlock: !FindInMap [CidrMap, !Ref "AWS::Region", PubSn2Cidr]
      Tags:
        - Key: Name
          Value: !Sub "${ProjectName}-${RegionName}-pub-sn2"

  PubRt12:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref Vpc
      Tags:
        - Key: Name
          Value: !Sub "${ProjectName}-${RegionName}-pub-rt12"

  PubRt12Sn1Association:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PubRt12
      SubnetId: !Ref PubSn1

  PubRt12Sn2Association:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PubRt12
      SubnetId: !Ref PubSn2

  PubRt12DefaultRoute:
    Type: AWS::EC2::Route
    DependsOn: IgwAttachment
    Properties:
      RouteTableId: !Ref PubRt12
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref Igw

# Web Private Subnet & Route Table
  WebSn3:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref Vpc
      AvailabilityZone: !Select [0, !GetAZs '']
      CidrBlock: !FindInMap [CidrMap, !Ref "AWS::Region", WebSn3Cidr]
      Tags:
        - Key: Name
          Value: !Sub "${ProjectName}-${RegionName}-web-sn3"

  WebSn4:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref Vpc
      AvailabilityZone: !Select [2, !GetAZs '']
      CidrBlock: !FindInMap [CidrMap, !Ref "AWS::Region", WebSn4Cidr]
      Tags:
        - Key: Name
          Value: !Sub "${ProjectName}-${RegionName}-web-sn4"

  WebRt34:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref Vpc
      Tags:
        - Key: Name
          Value: !Sub "${ProjectName}-${RegionName}-web-rt34"

  WebRt34Sn3Association:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref WebRt34
      SubnetId: !Ref WebSn3

  WebRt34Sn4Association:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref WebRt34
      SubnetId: !Ref WebSn4

  WebRt34DefaultRouteNatGateway:
    Type: AWS::EC2::Route
    Condition: Seoul
    DependsOn: NatGateway
    Properties:
      RouteTableId: !Ref WebRt34
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGateway

  WebRt34DefaultRouteNatInstance:
    Type: AWS::EC2::Route
    Condition: Saopaulo
    DependsOn: NatInstance
    Properties:
      RouteTableId: !Ref WebRt34
      DestinationCidrBlock: 0.0.0.0/0
      InstanceId: !Ref NatInstance

# TGW Connection Private Subnet & Route Table
  ConSn5:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref Vpc
      AvailabilityZone: !Select [0, !GetAZs '']
      CidrBlock: !FindInMap [CidrMap, !Ref "AWS::Region", ConSn5Cidr]
      Tags:
        - Key: Name
          Value: !Sub "${ProjectName}-${RegionName}-con-sn5"

  ConSn6:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref Vpc
      AvailabilityZone: !Select [2, !GetAZs '']
      CidrBlock: !FindInMap [CidrMap, !Ref "AWS::Region", ConSn6Cidr]
      Tags:
        - Key: Name
          Value: !Sub "${ProjectName}-${RegionName}-con-sn6"

  ConRt56:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref Vpc
      Tags:
        - Key: Name
          Value: !Sub "${ProjectName}-${RegionName}-con-rt56"

  ConRt56Sn5Association:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref ConRt56
      SubnetId: !Ref ConSn5

  ConRt56Sn6Association:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref ConRt56
      SubnetId: !Ref ConSn6

# Key Pair
  KeyPair:
    Type: AWS::EC2::KeyPair
    Properties:
      KeyName: !Sub "${RegionName}-key"
      PublicKeyMaterial: !Ref PublicKeyMaterial

# NAT Gateway & EIP
  NatEip:
    Type: AWS::EC2::EIP
    Properties:
      Tags:
        - Key: Name
          Value: !Sub "${ProjectName}-${RegionName}-nat-eip"

  NatGateway:
    Type: AWS::EC2::NatGateway
    Condition: Seoul
    DependsOn: NatEip
    Properties:
      AllocationId: !GetAtt NatEip.AllocationId
      SubnetId: !Ref PubSn1
      Tags:
        - Key: Name
          Value: !Sub "${ProjectName}-${RegionName}-nat-gw"

# Nat Instance & Security Group
  NatInstanceSg:
    Type: AWS::EC2::SecurityGroup
    Condition: Saopaulo
    Properties:
      GroupDescription: !Sub "${AWS::Region} Nat Instance Security Group"
      VpcId: !Ref Vpc
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 10.0.0.0/8
          Description: Allow TCP 22 for Admin SSH access
        - IpProtocol: icmp
          FromPort: -1
          ToPort: -1
          CidrIp: 10.0.0.0/8
          Description: Allow ICMP for Node communication
        - IpProtocol: -1
          CidrIp: !FindInMap [CidrMap, !Ref "AWS::Region", VpcCidr]
          Description: Allow all traffic for NAT
      Tags:
        - Key: Name
          Value: !Sub "${ProjectName}-${RegionName}-nat-instance-sg"

  NatInstance:
    Type: AWS::EC2::Instance
    Condition: Saopaulo
    Properties:
      ImageId: !FindInMap [AmiMap, !Ref "AWS::Region", Ami]
      InstanceType: t3.micro
      KeyName: !Ref KeyPair
      NetworkInterfaces:
        - AssociatePublicIpAddress: true
          DeviceIndex: 0
          PrivateIpAddress: !Join
            - "."
            - - !Select [0, !Split [".", !FindInMap [CidrMap, !Ref "AWS::Region", PubSn1Cidr]]]
              - !Select [1, !Split [".", !FindInMap [CidrMap, !Ref "AWS::Region", PubSn1Cidr]]]
              - !Select [2, !Split [".", !FindInMap [CidrMap, !Ref "AWS::Region", PubSn1Cidr]]]
              - "100"
          GroupSet: 
            - !Ref NatInstanceSg
          SubnetId: !Ref PubSn1
      SourceDestCheck: false
      Tags:
        - Key : Name
          Value : !Sub "${ProjectName}-${RegionName}-nat-instance"
      UserData:
        Fn::Base64: |
          #!/bin/bash
          wget https://raw.githubusercontent.com/qpemfh89/aws-tgw-project/main/nat_instance.sh
          chmod +x nat_instance.sh
          sh nat_instance.sh
          rm -f nat_instance.sh

  NatEipAssociation:
    Type: AWS::EC2::EIPAssociation
    Condition: Saopaulo
    Properties:
      AllocationId: !GetAtt NatEip.AllocationId
      InstanceId: !Ref NatInstance

# OpenVPN & Security Group & EIP
  OpenvpnSg:
    Type: AWS::EC2::SecurityGroup
    Condition: Seoul
    Properties:
      GroupDescription: !Sub "${AWS::Region} OpenVPN Security Group"
      VpcId: !Ref Vpc
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: !Ref AdminIp
          Description: Allow TCP 22 for Admin SSH access
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 0.0.0.0/0
          Description: Allow TCP 443 for Admin HTTPS access
        - IpProtocol: tcp
          FromPort: 943
          ToPort: 943
          CidrIp: 0.0.0.0/0
          Description: Allow TCP 943 for Admin web management
        - IpProtocol: tcp
          FromPort: 945
          ToPort: 945
          CidrIp: 0.0.0.0/0
          Description: Allow TCP 945 for internal communication
        - IpProtocol: udp
          FromPort: 1194
          ToPort: 1194
          CidrIp: 0.0.0.0/0
          Description: Allow UDP 1194 for VPN data
        - IpProtocol: icmp
          FromPort: -1
          ToPort: -1
          CidrIp: 10.0.0.0/8
          Description: Allow ICMP for internal communication test
      Tags:
        - Key: Name
          Value: !Sub "${ProjectName}-${RegionName}-openvpn-sg"

  Openvpn:
    Type: AWS::EC2::Instance
    Condition: Seoul
    Properties:
      ImageId: !FindInMap [AmiMap, openvpn, Ami]
      InstanceType: t3.micro
      KeyName: !Ref KeyPair
      NetworkInterfaces:
        - AssociatePublicIpAddress: true
          PrivateIpAddress: !Join
            - "."
            - - !Select [0, !Split [".", !FindInMap [CidrMap, !Ref "AWS::Region", PubSn2Cidr]]]
              - !Select [1, !Split [".", !FindInMap [CidrMap, !Ref "AWS::Region", PubSn2Cidr]]]
              - !Select [2, !Split [".", !FindInMap [CidrMap, !Ref "AWS::Region", PubSn2Cidr]]]
              - "100"
          DeviceIndex: 0
          GroupSet:
            - !Ref OpenvpnSg
          SubnetId: !Ref PubSn2
      Tags:
        - Key : Name
          Value : !Sub "${ProjectName}-${RegionName}-openvpn"

  OpenvpnEip:
    Type: AWS::EC2::EIP
    Condition: Seoul
    Properties:
      Tags:
        - Key: Name
          Value: !Sub "${ProjectName}-${RegionName}-eip-openvpn"

  OpenvpnEipAssociation:
    Type: AWS::EC2::EIPAssociation
    Condition: Seoul
    Properties:
      AllocationId: !GetAtt OpenvpnEip.AllocationId
      InstanceId: !Ref Openvpn

# OutPuts
Outputs:
  VpcId:
    Description: The VPC ID
    Value: !Ref Vpc
    Export:
      Name: VpcId
  PubSn1Id:
    Description: The Public Subnet1 ID
    Value: !Ref PubSn1
    Export:
      Name: PubSn1Id
  PubSn2Id:
    Description: The Public Subnet2 ID
    Value: !Ref PubSn2
    Export:
      Name: PubSn2Id
  WebSn3Id:
    Description: The Private Subnet3 ID
    Value: !Ref WebSn3
    Export:
      Name: WebSn3Id
  WebSn4Id:
    Description: The Private Subnet4 ID
    Value: !Ref WebSn4
    Export:
      Name: WebSn4Id
...
